# vsge

./: .gitignore  CMakeLists.txt
Editor/: CMakeLists.txt  main.cpp
Editor/Base/: Events.hpp  ImGuiMenu.hpp  ImGuiWindow.cpp  ImGuiWindow.hpp  ImVulkanTexture.hpp  ImguiHelper.cpp  ImguiHelper.hpp  PlatformSpecific.cpp  PlatformSpecific.hpp  Project.cpp  Project.hpp  ProjectSettings.cpp  ProjectSettings.hpp
Editor/EditorLayers/: EditorLayer.cpp  EditorLayer.hpp  EditorSettingsLayer.cpp  EditorSettingsLayer.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp
Editor/InspectorInterfaces/: MaterialEditor.cpp  MaterialEditor.hpp  ResourcePicker.cpp  ResourcePicker.hpp  ScriptPicker.cpp  ScriptPicker.hpp  VariantInput.cpp  VariantInput.hpp  ViewMaskEdit.cpp  ViewMaskEdit.hpp
Editor/Menus/: Edit_Menu.cpp  Edit_Menu.hpp  File_Menu.cpp  File_Menu.hpp  Windows_Menu.cpp  Windows_Menu.hpp
Editor/Misc/: AssimpMeshLoader.cpp  AssimpMeshLoader.h  DialogWindows.cpp  DialogWindows.hpp  EditorIcons.cpp  EditorIcons.hpp  ResourceImporter.cpp  ResourceImporter.hpp  SceneExt.cpp  SceneExt.hpp  TerrainThreadedEditor.cpp  TerrainThreadedEditor.hpp  Thumbnails.cpp  Thumbnails.hpp  VkGizmos.cpp  VkGizmos.hpp  VkMaterialsThumbnails.cpp  VkMaterialsThumbnails.hpp
Editor/MonoScripting/: MonoApiDescriptions.cpp  MonoApiDescriptions.hpp  MonoScriptCompile.cpp  MonoScriptCompile.hpp  MonoScriptStorage.cpp  MonoScriptStorage.hpp
Editor/ProjectBuild/: ResourcePacker.cpp  ResourcePacker.hpp
Editor/Windows/: BrowserWindow.cpp  BrowserWindow.hpp  ConsoleWindow.cpp  ConsoleWindow.hpp  CreateProjectWindow.cpp  CreateProjectWindow.hpp  EditorSettingsWindow.cpp  EditorSettingsWindow.hpp  EnvironmentSettingsWindow.cpp  EnvironmentSettingsWindow.hpp  HoldOnWindow.cpp  HoldOnWindow.hpp  InspectorWindow.cpp  InspectorWindow.hpp  PlayerViewWindow.cpp  PlayerViewWindow.hpp  ProjectBuildingWindow.cpp  ProjectBuildingWindow.hpp  ProjectSettingsWindow.cpp  ProjectSettingsWindow.hpp  ResourcePickWindow.cpp  ResourcePickWindow.hpp  SceneViewWindow.cpp  SceneViewWindow.hpp  SceneWindow.cpp  SceneWindow.hpp  StartWindow.cpp  StartWindow.hpp  ToolbarWindow.cpp  ToolbarWindow.hpp
Engine/: CMakeLists.txt
Engine/Audio/: AudioBuffer.cpp  AudioBuffer.hpp  AudioLayer.cpp  AudioLayer.hpp
Engine/Core/: ByteSerialize.cpp  ByteSerialize.hpp  ByteSolver.cpp  ByteSolver.hpp  FileLoader.cpp  FileLoader.hpp  LocaleStrings.cpp  Logger.cpp  Logger.hpp  Memory.cpp  Memory.hpp  Random.cpp  Random.hpp  Time.cpp  Time.hpp  YamlHelper.cpp  YamlHelper.hpp
Engine/Engine/: Application.cpp  Application.hpp  ApplicationLayer.hpp  Event.hpp  Window.cpp  Window.hpp  WindowEvent.hpp
Engine/Graphics/: Animation.cpp  Animation.hpp  AnimationChannel.cpp  AnimationChannel.hpp  Bone.cpp  Bone.hpp  FontManager.cpp  FontManager.hpp  Fonts.cpp  Fonts.hpp  Framebuffer.hpp  GpuBuffer.hpp  GpuObject.hpp  GraphicsCreation.cpp  GraphicsPipeline.hpp  LightsBuffer.cpp  LightsBuffer.hpp  Material.cpp  Material.hpp  MaterialDescriptor.hpp  MaterialTemplate.cpp  MaterialTemplate.hpp  MaterialTemplateCache.cpp  MaterialTemplateCache.hpp  Mesh.cpp  Mesh.hpp  PostprocessEffect.hpp  RenderTarget.cpp  RenderTarget.hpp  Renderer.cpp  Renderer.hpp  RenderingAPI.hpp  Sampler.cpp  Sampler.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  TextureFormat.hpp  VertexLayout.hpp
Engine/Input/: Input.cpp  Input.hpp  InputConstants.hpp  InputLayer.cpp  InputLayer.hpp
Engine/Math/: AABB.cpp  AABB.hpp  Color.hpp  Frustum.cpp  Frustum.hpp  Mat4.cpp  Mat4.hpp  MathBase.cpp  MathBase.hpp  MatrixCamera.cpp  MatrixCamera.hpp  MatrixTransform.cpp  MatrixTransform.hpp  Plane.cpp  Plane.hpp  Quaternion.cpp  Quaternion.hpp  Ray.cpp  Ray.hpp  Rect.cpp  Rect.hpp  RectTransform.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  Vertex.cpp  Vertex.hpp
Engine/MonoScripting/: MonoClassDesc.cpp  MonoClassDesc.hpp  MonoClassFieldDesc.cpp  MonoClassFieldDesc.hpp  MonoEventDesc.cpp  MonoEventDesc.hpp  MonoMethodDesc.cpp  MonoMethodDesc.hpp  MonoScript.cpp  MonoScript.hpp  MonoScriptBlob.cpp  MonoScriptBlob.hpp  MonoScriptingLayer.cpp  MonoScriptingLayer.hpp
Engine/NetworkBase/: Client.hpp  Server.cpp  Server.hpp
Engine/Networking/: Client.cpp  Client.hpp  NetworkMessage.cpp  NetworkMessage.hpp  NetworkingEvents.cpp  NetworkingEvents.hpp  NetworkingLayer.cpp  NetworkingLayer.hpp  Server.cpp  Server.hpp
Engine/Physics/: PhysicsLayer.cpp  PhysicsLayer.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp
Engine/Resources/: AnimationParser.cpp  AnimationParser.hpp  AsyncLoader.cpp  AsyncLoader.hpp  DefaultResources.cpp  DefaultResources.hpp  IResource.hpp  ModelParser.cpp  ModelParser.hpp  Resource.cpp  Resource.hpp  ResourceBundle.cpp  ResourceBundle.hpp  ResourceCache.cpp  ResourceCache.hpp  ResourceLayer.cpp  ResourceLayer.hpp  ResourceReference.cpp  ResourceReference.hpp  ResourcesWatchdog.cpp  ResourcesWatchdog.hpp  TextureProcessor.cpp  TextureProcessor.hpp
Engine/Scene/: Camera.cpp  Camera.hpp  Entity.cpp  Entity.hpp  IEntityComponent.cpp  IEntityComponent.hpp  Scene.cpp  Scene.hpp  SceneEnvironment.cpp  SceneEnvironment.hpp  SceneLayer.cpp  SceneLayer.hpp  SceneSerialization.cpp  SceneSerialization.hpp  SceneSerializationBinary.cpp
Engine/Scripting/: MonoLayer.cpp  MonoLayer.hpp  MonoScript.cpp  MonoScript.hpp  MonoScriptComponent.cpp  MonoScriptComponent.hpp  MonoScriptInstance.cpp  MonoScriptInstance.hpp
Engine/System/: FileWatcher.cpp  FileWatcher.hpp  PlatformSpecific.cpp  PlatformSpecific.hpp  Shell.cpp  Shell.hpp
Engine/UI/: UiLayer.cpp  UiLayer.hpp  UiRenderList.cpp  UiRenderList.hpp  View.cpp  View.hpp
EngineApplication/: CMakeLists.txt  main.cpp
EngineApplication/Layers/: MainLayer.cpp  MainLayer.hpp
EngineApplication/Misc/: ArgsParser.cpp  ArgsParser.hpp  ManifestParser.cpp  ManifestParser.hpp
EngineTest/: CMakeLists.txt  anims.scn  main.cpp
EngineTest/api_examples/: d3d12_rect_example.cpp  d3d12_rect_example.hpp  vulkan_rect_example.cpp  vulkan_rect_example.hpp
EngineTest/res/: Terrain.prefab  anims.scn  cubes_test.scn  (+11 more)
ImGui/: CMakeLists.txt
ShadersBuilder/: CMakeLists.txt  main.cpp
(+354 files in other folders)
